# directbnb

./: .clinerules  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .gitignore  DAISYUI_THEME.md  Dockerfile  Makefile  TESTING.md  TEST_QUICK_START.md  VITE_SETUP.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  dev.sh  entrypoint.sh  package.json  pyproject.toml  pytest.ini  tailwind.config.js  tsconfig.json  vite.config.ts
backend/src/: conftest.py
backend/src/apps/builder/: USER_REGISTRATION_FLOW.md  admin.py  api_urls.py  api_views.py  forms.py  models.py  permissions.py  schemas.py  serializers.py  tasks.py  urls.py  utils.py  views.py  wizard_forms.py
backend/src/apps/builder/management/commands/: check_stripe_config.py  create_stripe_webhook.py  import_color_schemes.py  list_stripe_sessions.py
backend/src/apps/builder/migrations/: 0001_initial.py  0002_colorschemechoices_icon_themechoices_icon_name_and_more.py  0003_package_website_owner_promotion_websiteplan.py  0004_remove_colorschemechoices_icon_and_more.py  0005_leadregistration_registrationoptions.py  0006_alter_leadregistration_email.py  0007_package_extra_info_and_more.py  0008_package_currency_alter_package_amount_and_more.py  0009_leadregistration_extra_requirements.py  0010_remove_registrationoptions_lead_registration_and_more.py  0011_leadregistration_user.py  0012_leadregistration_completed_at.py  0013_registrationoptions_expires_at_and_more.py  0014_stripewebhookpayload.py  0015_stripewebhookpayload_completed_at.py  0016_stripewebhookpayload_processed_successfully.py  0017_alter_stripewebhookpayload_options_and_more.py  0018_remove_website_airbnb_listing_url_and_more.py
backend/src/apps/builder/templates/builder/: theme_colors_widget.html
backend/src/apps/builder/tests/: README.md  factories.py  test_payment_flow.py  test_stripe_webhook.py  test_utils.py
backend/src/apps/properties/: admin.py  api_urls.py  api_views.py  example_crawl.json  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/src/apps/properties/migrations/: 0001_initial.py  0002_alter_property_options.py  0003_image_image_property_lead_alter_image_url_and_more.py  0004_alter_amenity_options.py  0005_article_touristattraction.py  0006_listing.py
backend/src/apps/users/: admin.py  api_urls.py  api_views.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/src/apps/users/management/commands/: createsuperuser_if_none_exists.py
backend/src/apps/users/migrations/: 0001_initial.py  0002_bnbuser_is_email_confirmed.py  0003_bnbuser_registered_at.py  0004_leadregistration_registrationoptions.py  0005_alter_leadregistration_options_and_more.py  0006_remove_registrationoptions_lead_registration_and_more.py
backend/src/apps/users/tests/: factories.py
backend/src/core/: celery.py  context_processors.py  models.py  settings.py  urls.py
backend/src/static/src/: main.css  main.ts
backend/src/templates/: base.html  index.html  logged_in_base.html
backend/src/templates/builder/: booking_wizard.html  lead_already_completed.html  lead_payment_error.html  wizard_step_partial.html
backend/src/templates/builder/emails/: payment_confirmation.html
backend/src/templates/builder/steps/: step1_theme.html  step2_color.html  step3_booking_links.html  step4_domain.html  step5_contact.html  step6_package.html  step7_review.html
backend/src/templates/builder/stripe/: cancelled.html  success.html
backend/src/templates/cotton/: savings_calculator.html
backend/src/templates/cotton/ui/: hero.html
backend/src/templates/properties/: property_detail.html  property_list.html  property_update.html
backend/src/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  resend_verification.html  set_initial_password.html
backend/src/templates/users/: home.html  profile.html
backend/src/templates/users/emails/: email_is_verified.html  verify_email.html
django/: Dockerfile  pyproject.toml
django/core/: asgi.py  settings.py  urls.py  wsgi.py
marketing_frontend/: README.md  bun.lockb  index.html  package.json  vite.config.ts
(+34 files in other folders)
