[project]
name = "directbnb-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "cotton-daisy>=0.0.17",
    "disposable-email-domains>=0.0.147",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-cotton>=2.4.0",
    "django-daisy>=2.0.3",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-phonenumber-field[phonenumbers]>=8.3.0",
    "django-storages[s3]>=1.14.6",
    "django-vite>=3.1.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.4.0",
    "drf-spectacular>=0.27.2",
    "email-validator>=2.3.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "lucide[django]>=1.1.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyairbnb>=2.1.1",
    "pydantic>=2.12.3",
    "redis>=7.0.1",
    "stripe>=13.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "pytest-factoryboy>=2.6.0",
    "pytest-lazy-fixture>=0.6.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
testpaths = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
    "--nomigrations",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
