[project]
name = "directbnb-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-phonenumber-field[phonenumbers]>=8.3.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
